--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "install-framework": "your-framework-install-script"
   },
   "dependencies": {
     "@types/react": "18.0.28",
