--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "install-framework": "your-framework-install-script"
+    "install-framework": "npx your-framework-install-script"
   },
   "dependencies": {
     "@types/react": "18.0.28",
