--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "install-framework": "npx your-framework-install-script"
+    "install-framework": "npx install-webscraper"
   },
   "dependencies": {
     "@types/react": "18.0.28",
@@ -35,7 +35,7 @@
     "concurrently": "^7.6.0"
   },
   "bin": {
-    "your-framework-install-script": "./install-webscraper.js"
+    "install-webscraper": "./install-webscraper.js"
   },
   "author": "Kristoffer Snopestad Søderkvist AKA Bass4Nation",
   "license": "ISC"
