--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "This webscraper can take screenshot and get data from websites. This is a school assignment 2023.",
   "main": "server",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "start-server": "ts-node server.ts",
     "start-client": "next dev",
     "dev": "concurrently \"npm run start-server\" \"npm run start-client\"",
     "build": "next build",
     "start": "next start",
+    "start:server": "ts-node start.ts",
     "lint": "next lint",
     "install-framework": "npx install-webscraper"
   },
@@ -27,14 +28,19 @@
     "puppeteer": "^19.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "ts-node": "^10.9.1",
     "robots-txt-parser": "^2.0.3",
-    "typescript": "5.0.2"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.5",
-    "concurrently": "^7.6.0"
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/supertest": "^2.0.12",
+    "concurrently": "^7.6.0",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "bin": {
     "install-webscraper": "./install-webscraper.js"
