--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "robots-txt-parser": "^2.0.3",
+    "user-agents": "^1.0.1356",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
