--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "robots-txt-parser": "^2.0.3",
-    "user-agents": "^1.0.1356",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "user-agents": "^1.0.1365"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
